--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,13 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    models:
+      question: 質問
+    attributes:
+      question:
+        id: ID
+        title: タイトル
+        description: 質問内容
   date:
     abbr_day_names:
     - 日
