--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -20,6 +20,7 @@ ja:
         admin: 管理者権限
         password: パスワード
         password_confirmation: パスワード(確認)
+        image: 画像
         created_at: 登録日時
         updated_at: 更新日時
   date:
