--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,7 @@ ja:
         id: ID
         title: タイトル
         description: 質問内容
+        resolved: 解決状況
       user:
         name: 名前
         email: メールアドレス
