--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,6 +15,8 @@ ja:
         title: タイトル
         description: 質問内容
         resolved: 解決状況
+      answer:
+        description: 回答内容
       user:
         name: 名前
         email: メールアドレス
